--- a/next-tavla/src/Admin/scenarios/TileSettings/components/TileSettingsWrapper/styles.module.css
+++ b/next-tavla/src/Admin/scenarios/TileSettings/components/TileSettingsWrapper/styles.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     background-color: var(--tertiary-background-color);
     border-radius: 0.5em;
-    padding: 1em;
+    padding: 2em;
     width: 100%;
     height: 30em;
 }
